// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                data-no-patch={true}
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
            data-no-patch={true}
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Monkey Patching React
                  </h2>
                  <p>
                    Hello! My name is Jake, and today I'm going to show you some totally not hacks at all, believe me, I promise, really not hacks... awesome monkey patching of React.
                  </p>
                  <h2>
                    Want more awesome stuff?
                  </h2>
                  <p>
                    Here's some links you might enjoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This demo"
                      >
                        This demo - github.com/JakeSidSmith/react-monkey-patching
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Blog - jakesidsmith.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GitHub"
                      >
                        My GitHub - github.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Twitter"
                      >
                        My Twitter - twitter.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="React Highlight Updates"
                      >
                        React Highlight Updates (we'll cover this shortly) - npmjs.com/package/react-highlight-updates
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Fastclick"
                      >
                        React Fastclick (we'll cover this briefly also) - npmjs.com/package/react-fastclick
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when llamified 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                data-no-patch={true}
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
            data-no-patch={true}
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Llama Llama Llama
                  </h2>
                  <p>
                    Llama! Llama llama llama Llama, llama llama LLAMA'llama llama llama llama llama llama llama llama llama llama llama, llama llama, LLAMA llama, llama llama llama... llama llama llama llama Llama.
                  </p>
                  <h2>
                    Llama llama llama llama?
                  </h2>
                  <p>
                    Llama'llama llama llama llama llama llama:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="Llama llama"
                      >
                        Llama llama - llama.llama/Llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Llama Llama Llama"
                      >
                        Llama Llama Llama (llama'llama llama llama llama) - llama.llama/llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama (llama'llama llama llama llama llama) - llama.llama/llama/llama-llama
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when scrambled 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                data-no-patch={true}
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
            data-no-patch={true}
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Mokney Ptciahng Racet
                  </h2>
                  <p>
                    Hello! My nmae is Jkae, and toady I'm gonig to show you some toatlly not hkcas at all, believe me, I pmrosie, ralley not hkcas... asewmoe mokney pcnaithg of Recat.
                  </p>
                  <h2>
                    Wnat mroe aomeswe stuff?
                  </h2>
                  <p>
                    Hree's smoe links you mhigt enojy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This demo"
                      >
                        This dmeo - ghuitb.com/JaiSitkdSmeh/react-mkneoy-pthcnaig
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Blog - jsedmitsikah.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GiHtub"
                      >
                        My GituHb - gtuihb.com/jiismdasketh
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Tiewttr"
                      >
                        My Ttetiwr - tetwtir.com/jseimtkidsah
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="React Hhiighglt Udtaeps"
                      >
                        Raect Hgihlhgit Uapedts (we'll ceovr tihs sohltry) - npmjs.com/pckaage/racet-hghiihglt-utedaps
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Factlcsik"
                      >
                        Rcaet Fcatlcisk (we'll cvoer this briefly also) - njpms.com/package/racet-ftlaiccsk
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
